--- a/index.html
+++ b/index.html
@@ -8,6 +8,41 @@
     <title>Drum Kit</title>
 </head>
 <body>
-    
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
+    <div data-key="">
+        <kbd></kbd>
+        <span></span>
+    </div>
 </body>
 </html>
