--- a/index.html
+++ b/index.html
@@ -8,41 +8,60 @@
     <title>Drum Kit</title>
 </head>
 <body>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <header>
+        <h1>JavaScript Drum Kit</h1>
+        <p>Press one of the keys below to play the corresponding sound</p>
+    </header>
+
+    <div data-key="65" class="key">
+        <kbd>A</kbd>
+        <span class="sound">Clap</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="83" class="key">
+        <kbd>S</kbd>
+        <span class="sound">Hit Hat</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="68" class="key">
+        <kbd>D</kbd>
+        <span class="sound">Kick</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="70" class="key">
+        <kbd>F</kbd>
+        <span class="sound">Open Hat</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="71" class="key">
+        <kbd>G</kbd>
+        <span class="sound">Boom</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="72" class="key">
+        <kbd>H</kbd>
+        <span class="sound">Ride</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="74" class="key">
+        <kbd>J</kbd>
+        <span class="sound">Snare</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="75" class="key">
+        <kbd>K</kbd>
+        <span class="sound">Tom</span>
     </div>
-    <div data-key="">
-        <kbd></kbd>
-        <span></span>
+    <div data-key="76" class="key">
+        <kbd>L</kbd>
+        <span class="sound">Tink</span>
     </div>
+
+    <footer>
+        <p>Developed by <a href="https://github.com/imaCod3r">Edson Rodrigues</a></p>
+    </footer>
+
+    <audio data-key="65" src="assets/sounds/clap.wav"></audio>
+    <audio data-key="83" src="assets/sounds/hihat.wav"></audio>
+    <audio data-key="68" src="assets/sounds/kick.wav"></audio>
+    <audio data-key="70" src="assets/sounds/openhat.wav"></audio>
+    <audio data-key="71" src="assets/sounds/boom.wav"></audio>
+    <audio data-key="72" src="assets/sounds/ride.wav"></audio>
+    <audio data-key="74" src="assets/sounds/snare.wav"></audio>
+    <audio data-key="75" src="assets/sounds/tom.wav"></audio>
+    <audio data-key="76" src="assets/sounds/tink.wav"></audio>
 </body>
 </html>
