--- a/index.html
+++ b/index.html
@@ -1,53 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Edson Rodrigues">
     <meta name="description" content="JavaScript Drum Kit">
     <title>Drum Kit</title>
+
+    <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         <h1>JavaScript Drum Kit</h1>
         <p>Press one of the keys below to play the corresponding sound</p>
     </header>
 
-    <div data-key="65" class="key">
-        <kbd>A</kbd>
-        <span class="sound">Clap</span>
-    </div>
-    <div data-key="83" class="key">
-        <kbd>S</kbd>
-        <span class="sound">Hit Hat</span>
-    </div>
-    <div data-key="68" class="key">
-        <kbd>D</kbd>
-        <span class="sound">Kick</span>
-    </div>
-    <div data-key="70" class="key">
-        <kbd>F</kbd>
-        <span class="sound">Open Hat</span>
-    </div>
-    <div data-key="71" class="key">
-        <kbd>G</kbd>
-        <span class="sound">Boom</span>
-    </div>
-    <div data-key="72" class="key">
-        <kbd>H</kbd>
-        <span class="sound">Ride</span>
-    </div>
-    <div data-key="74" class="key">
-        <kbd>J</kbd>
-        <span class="sound">Snare</span>
-    </div>
-    <div data-key="75" class="key">
-        <kbd>K</kbd>
-        <span class="sound">Tom</span>
-    </div>
-    <div data-key="76" class="key">
-        <kbd>L</kbd>
-        <span class="sound">Tink</span>
+    <div class="container">
+        <div data-key="65" class="key">
+            <kbd>A</kbd>
+            <span class="sound">Clap</span>
+        </div>
+        <div data-key="83" class="key">
+            <kbd>S</kbd>
+            <span class="sound">Hit Hat</span>
+        </div>
+        <div data-key="68" class="key">
+            <kbd>D</kbd>
+            <span class="sound">Kick</span>
+        </div>
+        <div data-key="70" class="key">
+            <kbd>F</kbd>
+            <span class="sound">Open Hat</span>
+        </div>
+        <div data-key="71" class="key">
+            <kbd>G</kbd>
+            <span class="sound">Boom</span>
+        </div>
+        <div data-key="72" class="key">
+            <kbd>H</kbd>
+            <span class="sound">Ride</span>
+        </div>
+        <div data-key="74" class="key">
+            <kbd>J</kbd>
+            <span class="sound">Snare</span>
+        </div>
+        <div data-key="75" class="key">
+            <kbd>K</kbd>
+            <span class="sound">Tom</span>
+        </div>
+        <div data-key="76" class="key">
+            <kbd>L</kbd>
+            <span class="sound">Tink</span>
+        </div>
     </div>
 
     <footer>
@@ -64,4 +76,5 @@
     <audio data-key="75" src="assets/sounds/tom.wav"></audio>
     <audio data-key="76" src="assets/sounds/tink.wav"></audio>
 </body>
+
 </html>
