--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+
+    <script src="main.js" defer></script>
 </head>
 
 <body>
